syntax = "proto3";

package message;

option go_package="./messagepb";

message MessageRequest {
  string message1 = 1;
  string message2 = 2;
//  string message3 = 10;
}

message CombineMessageResponse {
  string result = 1;
}

message SplitMessage {
  string message = 1;
}

message ResponseWords {
  string word = 1;
}

message ParagraphRequest {
  string word = 1;
}

message ParagraphResponse {
  string result = 1;
}

message AverageRequest{
  float num = 1;
}

message AverageResponse {
  float result = 1;
}

service MessageService {
  rpc CombineMessage(MessageRequest) returns (CombineMessageResponse);
  rpc SplitMessageIntoWords(SplitMessage) returns (stream ResponseWords);
  rpc MakeParagraphByWord(stream ParagraphRequest) returns (ParagraphResponse);
  rpc Average(stream AverageRequest) returns (AverageResponse);
}